# futurisys_churn_api

./: .coverage  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-pipeline.yml
data/: data_employees.csv
exports/: predictions.csv
models/: churn_model.joblib  input_features.json
src/futurisys_api/api/: main.py
src/futurisys_churn_api/api/: constants.py  main.py  preprocessing.py  schemas.py  security.py
src/futurisys_churn_api/api/endpoints/: auth.py  prediction.py
src/futurisys_churn_api/database/: batch_predict.py  connection.py  create_db.py  export_latest_predictions.py  models.py  seed_db.py
tests/: conftest.py  test_api.py  test_api_predict.py  test_auth_security.py  test_connection_invalid.py  test_db_sql.py  test_encode_categorical.py  test_preproc_on_dataset.py  test_preprocessing.py  test_preprocessing_errors.py
tests/data/: employees_sample.csv
