[project]
name = "futurisys_churn_api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "imbalanced-learn>=0.14.0",
    "joblib>=1.5.2",
    "pandas>=2.3.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
]

# Permet de trouver nos packages dans le répertoire src
[tool.setuptools.packages.find]
where = ["src"]

# Permet de dire à pytest où trouver les tests
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

addopts = [
    "--cov=src/futurisys_churn_api", # Mesure la couverture de notre package
    "--cov-report=term-missing",    # Affiche les lignes manquantes
    "--cov-fail-under=80"           # Fait échouer les tests si la couverture < 80%
]

[tool.coverage.run]
branch = true
source = ["futurisys_churn_api"]
omit = [
  "src/futurisys_churn_api/database/create_db.py",
  "src/futurisys_churn_api/database/seed_db.py",
  "src/futurisys_churn_api/database/batch_predict.py",
  "src/futurisys_churn_api/__init__.py",
  "src/futurisys_churn_api/api/__init__.py",
  "src/futurisys_churn_api/database/__init__.py"
]

[tool.coverage.report]
show_missing = true
fail_under = 80
